Finished first phase of landing page

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,7 +1,7 @@
 // Typography
 $sans-serif: $helvetica;
 $serif: $georgia;
-$base-font-family: $sans-serif;
+$base-font-family: 'Gotham A', 'Gotham B', $sans-serif, 'Nanum Gothic';
 $header-font-family: $base-font-family;
 
 // Sizes
