--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,13 @@
   {% include head.html %}
 
   <body>
+    {% include header.html %}
+
     {{ content }}
+
+    {% include footer.html %}
   </body>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="{{ "/js/evar.js" | prepend: site.baseurl }}"></script>
 </html>
