--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,9 @@
 ---
 ---
 @charset "utf-8";
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 @import "bourbon/bourbon";
 @import "base/base";
 @import "neat/neat";
+@import "evar/evar";
