--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -25,7 +25,7 @@ $base-background-color: white;
 
 // Font Colors
 $base-font-color: $dark-gray;
-$base-accent-color: $blue;
+$base-accent-color: #0092ff;
 
 // Link Colors
 $base-link-color: $base-accent-color;
