[NEW CONFIGURATIONS] Blog and Facebook url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,8 +13,8 @@
       </ul>
 
       <ul class="social-links">
-        <li class="blog-logo"><a href="javascript:void(0)"><img src="{{ "/images/blog-logo-circle-2x.png" | prepend: site.baseurl }}" alt="" width="35px"></a></li>
-        <li class="facebook-logo"><a href="javascript:void(0)"><img src="{{ "/images/facebook-logo-circle-2x.png" | prepend: site.baseurl }}" alt="" width="35px"></a></li>
+        <li class="blog-logo"><a href="{{ site.blog_url }}" target="_blank"><img src="{{ "/images/blog-logo-circle-2x.png" | prepend: site.baseurl }}" alt="" width="35px"></a></li>
+        <li class="facebook-logo"><a href="{{ site.facebook_url }}" target="_blank"><img src="{{ "/images/facebook-logo-circle-2x.png" | prepend: site.baseurl }}" alt="" width="35px"></a></li>
       </ul>
     </div>
   </div>
