[NEW PAGES] Terms of use and Privacy policy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
       <ul class="page-links">
         <li><a href="#evar-studio">에바 스튜디오</a></li>
         <li><a href="#app-download">앱 다운로드</a></li>
-        <li><a href="javascript:void(0)">이용약관</a></li>
-        <li><a href="javascript:void(0)">개인정보취급방침</a></li>
+        <li><a href="{{ "/terms-of-use.html" | prepend: site.baseurl }}">이용약관</a></li>
+        <li><a href="{{ "/privacy-policy.html" | prepend: site.baseurl }}">개인정보취급방침</a></li>
       </ul>
 
       <ul class="social-links">
