[NEW PAGE] Find password

--- a/_sass/evar/_evar.scss
+++ b/_sass/evar/_evar.scss
@@ -620,6 +620,7 @@ body {
     background-image: url(../images/cocktails-bg.jpg);
     background-repeat: no-repeat;
     background-position: center 226px;
+    min-height: 1000px;
   }
 
   .form-container {
