[ENHANCEMENT] Fixed asset path

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,19 +2,19 @@
   <div class="footer-links">
     <div class="inner-container">
       <div class="footer-logo">
-        <img src="{{ "/images/footer-logo-2x.png" | prepend: site.baseurl }}" alt="" width="121px">
+        <img src="{{ "images/footer-logo-2x.png" | prepend: site.baseurl }}" alt="" width="121px">
       </div>
 
       <ul class="page-links">
         <li><a href="#evar-studio">에바 스튜디오</a></li>
         <li><a href="#app-download">앱 다운로드</a></li>
-        <li><a href="{{ "/terms-of-use.html" | prepend: site.baseurl }}">이용약관</a></li>
-        <li><a href="{{ "/privacy-policy.html" | prepend: site.baseurl }}">개인정보취급방침</a></li>
+        <li><a href="{{ "terms-of-use.html" | prepend: site.baseurl }}">이용약관</a></li>
+        <li><a href="{{ "privacy-policy.html" | prepend: site.baseurl }}">개인정보취급방침</a></li>
       </ul>
 
       <ul class="social-links">
-        <li class="blog-logo"><a href="{{ site.blog_url }}" target="_blank"><img src="{{ "/images/blog-logo-circle-2x.png" | prepend: site.baseurl }}" alt="" width="35px"></a></li>
-        <li class="facebook-logo"><a href="{{ site.facebook_url }}" target="_blank"><img src="{{ "/images/facebook-logo-circle-2x.png" | prepend: site.baseurl }}" alt="" width="35px"></a></li>
+        <li class="blog-logo"><a href="{{ site.blog_url }}" target="_blank"><img src="{{ "images/blog-logo-circle-2x.png" | prepend: site.baseurl }}" alt="" width="35px"></a></li>
+        <li class="facebook-logo"><a href="{{ site.facebook_url }}" target="_blank"><img src="{{ "images/facebook-logo-circle-2x.png" | prepend: site.baseurl }}" alt="" width="35px"></a></li>
       </ul>
     </div>
   </div>
