--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="inner-container">
     <div class="evar-logo">
-      <a href="{{ "/" | prepend: site.baseurl }}"><img src="{{ "/images/logo-2x.png" | prepend: site.baseurl }}" alt="" width="121px"></a>
+      <a href="{{ "" | prepend: site.baseurl }}"><img src="{{ "images/logo-2x.png" | prepend: site.baseurl }}" alt="" width="121px"></a>
 
       <h4>The Evolution of Augmented Reality</h4>
     </div>
