--- a/_includes/media-viewer.html
+++ b/_includes/media-viewer.html
@@ -1,5 +1,5 @@
 <div id="evar-video-viewer" class="media-viewer">
-  <a href="javascript:void(0)" class="close"><img src="{{ "/images/media-viewer/close-2x.png" | prepend: site.baseurl }}" alt="" width="45px"></a>
+  <a href="javascript:void(0)" class="close"><img src="{{ "images/media-viewer/close-2x.png" | prepend: site.baseurl }}" alt="" width="45px"></a>
 
   <figure id="evar-video">
     <div class="table-wrapper">
@@ -22,9 +22,9 @@
 </div>
 
 <div id="evar-use-cases-viewer" class="media-viewer">
-  <a href="javascript:void(0)" class="close"><img src="{{ "/images/media-viewer/close-2x.png" | prepend: site.baseurl }}" alt="" width="45px"></a>
-  <a href="javascript:void(0)" id="media-viewer-controller-left"><img src="{{ "/images/media-viewer/left-2x.png" | prepend: site.baseurl }}" alt="" width="24px"></a>
-  <a href="javascript:void(0)" id="media-viewer-controller-right"><img src="{{ "/images/media-viewer/right-2x.png" | prepend: site.baseurl }}" alt="" width="24px"></a>
+  <a href="javascript:void(0)" class="close"><img src="{{ "images/media-viewer/close-2x.png" | prepend: site.baseurl }}" alt="" width="45px"></a>
+  <a href="javascript:void(0)" id="media-viewer-controller-left"><img src="{{ "images/media-viewer/left-2x.png" | prepend: site.baseurl }}" alt="" width="24px"></a>
+  <a href="javascript:void(0)" id="media-viewer-controller-right"><img src="{{ "images/media-viewer/right-2x.png" | prepend: site.baseurl }}" alt="" width="24px"></a>
 
   <figure style="display: block">
     <div class="table-wrapper">
@@ -33,8 +33,8 @@
           <aside><h3>토익강의</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/toeic.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/toeic.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/toeic.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/toeic.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -50,8 +50,8 @@
           <aside><h3>월드컵 티셔츠</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/worldcup-tshirt.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/worldcup-tshirt.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/worldcup-tshirt.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/worldcup-tshirt.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -67,8 +67,8 @@
           <aside><h3>트랜스포머 4</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/transformer-4.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/transformer-4.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/transformer-4.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/transformer-4.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -84,8 +84,8 @@
           <aside><h3>골프장 홀소개</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/golf-courses.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/golf-courses.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/golf-courses.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/golf-courses.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -101,8 +101,8 @@
           <aside><h3>모델하우스</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/model-house.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/model-house.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/model-house.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/model-house.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -118,8 +118,8 @@
           <aside><h3>명함</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/business-card.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/business-card.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/business-card.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/business-card.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -135,8 +135,8 @@
           <aside><h3>청첩장</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/wedding-card.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/wedding-card.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/wedding-card.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/wedding-card.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -152,8 +152,8 @@
           <aside><h3>초대장</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/invitation-card.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/invitation-card.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/invitation-card.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/invitation-card.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -169,8 +169,8 @@
           <aside><h3>역린 2</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/film-fatal-encounter.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/film-fatal-encounter.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/film-fatal-encounter.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/film-fatal-encounter.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -186,8 +186,8 @@
           <aside><h3>신의 한 수</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/film-divine-move.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/film-divine-move.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/film-divine-move.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/film-divine-move.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -203,8 +203,8 @@
           <aside><h3>타히티 오빤내꺼</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/tahiti-3rd-single.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/tahiti-3rd-single.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/tahiti-3rd-single.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/tahiti-3rd-single.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -220,8 +220,8 @@
           <aside><h3>그레이스 오브 모나코</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/film-grace-of-monaco.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/film-grace-of-monaco.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/film-grace-of-monaco.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/film-grace-of-monaco.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -237,8 +237,8 @@
           <aside><h3>K2 플라이워크</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/k2-flywalk.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/k2-flywalk.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/k2-flywalk.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/k2-flywalk.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -254,8 +254,8 @@
           <aside><h3>BACARDI BLACK</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/bacardi-black.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/bacardi-black.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/bacardi-black.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/bacardi-black.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -271,8 +271,8 @@
           <aside><h3>BACARDI LIMON</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/bacardi-limon.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/bacardi-limon.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/bacardi-limon.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/bacardi-limon.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -288,8 +288,8 @@
           <aside><h3>TOP 커피</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/top-coffee.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/top-coffee.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/top-coffee.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/top-coffee.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -305,8 +305,8 @@
           <aside><h3>참이슬 후레쉬</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/chamisul.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/chamisul.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/chamisul.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/chamisul.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -322,8 +322,8 @@
           <aside><h3>처음처럼</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/soft-soju.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/soft-soju.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/soft-soju.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/soft-soju.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
@@ -339,8 +339,8 @@
           <aside><h3>LG 페리오</h3></aside>
           <div class="media-stage">
             <div>
-              <a href="{{ "/images/use-cases/lg-perio.jpg" | prepend: site.baseurl }}" target="_blank">
-                <img src="{{ "/images/use-cases/lg-perio.jpg" | prepend: site.baseurl }}" alt="">
+              <a href="{{ "images/use-cases/lg-perio.jpg" | prepend: site.baseurl }}" target="_blank">
+                <img src="{{ "images/use-cases/lg-perio.jpg" | prepend: site.baseurl }}" alt="">
               </a>
             </div>
           </div>
