--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,5 +17,5 @@
   </body>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="{{ "/js/evar.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "js/evar.js" | prepend: site.baseurl }}"></script>
 </html>
