[ENHANCEMENT] Added explicitly http:// protocol to js, css assets

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,6 @@
 
   <link rel="stylesheet" href="{{ "css/normalize.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6242312/709766/css/fonts.css">
-  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css">
+  <link rel="stylesheet" type="text/css" href="http://cloud.typography.com/6242312/709766/css/fonts.css">
+  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css">
 </head>
