--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,6 @@
     <div id="shade"></div>
   </body>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="{{ "js/evar.js" | prepend: site.baseurl }}"></script>
 </html>
