--- a/_sass/evar/_media-viewer.scss
+++ b/_sass/evar/_media-viewer.scss
@@ -88,7 +88,7 @@
     right: 10%;
     bottom: 160px;
     margin: 0;
-    overflow: auto;
+    overflow: hidden;
   }
 
   //&.with-nav {
@@ -131,6 +131,10 @@
       height: 400px;
       width: 100%;
       vertical-align: middle;
+    }
+
+    img {
+      height: 100%;
     }
   }
 
