--- a/_sass/evar/_dashboard.scss
+++ b/_sass/evar/_dashboard.scss
@@ -140,6 +140,7 @@ $dashboard-header-height: 90px;
               display: block;
               margin-bottom: 10px;
               color: #f4f4f4;
+              text-shadow: 0px 0px 10px rgba(0,0,0,.1);
               @include transition(color .1s linear);
             }
 
