[ENHANCEMENT] 대시보드 헤더 메뉴링크 hover 스타일 수정

--- a/_sass/evar/_dashboard.scss
+++ b/_sass/evar/_dashboard.scss
@@ -42,10 +42,13 @@ $dashboard-header-height: 90px;
         padding: 0 25px;
         @include transition(background-color .1s linear, color .1s linear);
 
-        &:hover,
         &.active {
           color: white;
           background-color: $brand-color;
+        }
+
+        &:hover {
+          color: $brand-color;
         }
       }
     }
