[ENHANCEMENT] 대시보드 헤더 메뉴링크 hover 스타일 수정

--- a/_sass/evar/_dashboard.scss
+++ b/_sass/evar/_dashboard.scss
@@ -45,6 +45,10 @@ $dashboard-header-height: 90px;
         &.active {
           color: white;
           background-color: $brand-color;
+
+          &:hover {
+            color: white;
+          }
         }
 
         &:hover {
