--- a/_includes/dashboard-header.html
+++ b/_includes/dashboard-header.html
@@ -11,9 +11,64 @@
     </nav>
 
     <div class="account-actions">
-      <p><strong>정선우</strong>님의 보유 포인트는 25,000P 입니다.</p>
-      <a href="javascript:void(0)" class="button primary">충전하기</a>
+      <p><strong>홍성철</strong>님의 보유 포인트는 25,000P 입니다.</p>
+      <label for="purchase-package">
+        <span class="button primary">충전하기</span>
+      </label>
       <a href="javascript:void(0)" class="button">로그아웃</a>
     </div>
   </div>
 </header>
+
+<div class="purchase-package-modal modal">
+  <input class="modal-state" id="purchase-package" type="checkbox">
+  <div class="modal-window">
+    <div class="modal-inner">
+      <label class="modal-close" for="purchase-package"></label>
+
+      <div class="modal-body">
+        <h2>Package</h2>
+        <p><b>추가 적립</b>을 통해 <b>훨씬 더 많은 포인트와 스캔</b>을 이용하실 수 있습니다.</p>
+
+        <ul>
+          <li class="pricing-box">
+            <h3>5,000원 결제시</h3>
+            <div class="pricing-point">
+              <h1>25P</h1>
+              <p><span class="highlight">25 에바포인트</span> 충전</p>
+              <span class="side-text">25명의 고객이 확실히 영상을 재생하여 홍보가 된 횟수!</span>
+              <a href="javascript:void(0)" class="button">결제하기</a>
+            </div>
+          </li>
+          <li class="pricing-box">
+            <h3>10,000원 결제시</h3>
+            <div class="pricing-point">
+              <h1>50P</h1>
+              <p><span class="highlight">50 에바포인트</span> 충전</p>
+              <span class="side-text">50명의 고객이 확실히 영상을 재생하여 홍보가 된 횟수!</span>
+              <a href="javascript:void(0)" class="button">결제하기</a>
+            </div>
+          </li>
+          <li class="pricing-box">
+            <h3>50,000원 결제시</h3>
+            <div class="pricing-point">
+              <h1>255P</h1>
+              <p><span class="highlight">255 에바포인트</span> 충전</p>
+              <span class="side-text">2% 추가적립<br>1 Scan 당 196원</span>
+              <a href="javascript:void(0)" class="button">결제하기</a>
+            </div>
+          </li>
+          <li class="pricing-box">
+            <h3>100,000원 결제시</h3>
+            <div class="pricing-point">
+              <h1>520P</h1>
+              <p><span class="highlight">520 에바포인트</span> 충전</p>
+              <span class="side-text">4% 추가적립<br>1 Scan 당 192원</span>
+              <a href="javascript:void(0)" class="button">결제하기</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
