[BREAKING CHANGES] dashboard namespace 제거

--- a/_includes/dashboard-head.html
+++ b/_includes/dashboard-head.html
@@ -8,5 +8,5 @@
   <link rel="stylesheet" href="{{ "css/normalize.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "css/dashboard.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" type="text/css" href="http://cloud.typography.com/6242312/709766/css/fonts.css">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
