--- a/_includes/dashboard-header.html
+++ b/_includes/dashboard-header.html
@@ -5,9 +5,9 @@
     </div>
 
     <nav>
-      <a href="{{ "dashboard/campaigns.html" | prepend: site.baseurl }}" class="{% if page.path == "dashboard/campaigns.html" %}active{% endif %}">캠페인</a>
-      <a href="{{ "dashboard/statistics.html" | prepend: site.baseurl }}" class="{% if page.path == "dashboard/statistics.html" %}active{% endif %}">통계</a>
-      <a href="{{ "dashboard/settings.html" | prepend: site.baseurl }}" class="{% if page.path == "dashboard/settings.html" %}active{% endif %}">마이페이지</a>
+      <a href="{{ "dashboard-campaigns.html" | prepend: site.baseurl }}" class="{% if page.path == "dashboard-campaigns.html" %}active{% endif %}">캠페인</a>
+      <a href="{{ "dashboard-statistics.html" | prepend: site.baseurl }}" class="{% if page.path == "dashboard-statistics.html" %}active{% endif %}">통계</a>
+      <a href="{{ "dashboard-settings.html" | prepend: site.baseurl }}" class="{% if page.path == "dashboard-settings.html" %}active{% endif %}">마이페이지</a>
     </nav>
 
     <div class="account-actions">
