--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -11,6 +11,8 @@ $unitless-line-height: $base-line-height / ($base-line-height * 0 + 1); // Strip
 $header-line-height: $base-font-size * 1.25;
 $base-border-radius: em(3);
 
+$base-spacing: 1.5 * 1em;
+
 // Colors
 $blue: #477DCA;
 $dark-gray: #333;
